--- a/src/estilos/reloj.css
+++ b/src/estilos/reloj.css
@@ -4,9 +4,8 @@
     justify-content: center;
     font-size: 16px;
     padding: 1rem 2rem;
-    margin: 20px auto;
-    width: 400px;
-    
+    margin: 10px auto;
+    max-width: 400px;
 }
 
 
