--- a/src/estilos/reglas.css
+++ b/src/estilos/reglas.css
@@ -13,7 +13,7 @@
 .reglas h2{
     margin: 2rem 2rem ;
     font-weight: 700;
-    
+    color: #080616;
 }
 .numeros a{
     font-weight: 700;
@@ -42,7 +42,7 @@
 .numeros > div {
     flex: 10 100%; /* Ocupa todo el ancho */
     max-width: 300px; /* Ancho máximo */
-    margin: 20px 1rem;
+    margin: 20px 2rem;
     text-align: center;
 }
 
@@ -90,7 +90,7 @@
 span {
     font-weight: bold;
     color: #080616;
-    display: flex;
+    display: block;
     margin: 8px 0px;
 }
 
