--- a/src/estilos/lista.css
+++ b/src/estilos/lista.css
@@ -76,14 +76,18 @@
 
 
     .ganadores p {
-        margin: 8px 0px;
-        padding: 8px ;
-        
+        padding: 0.5rem 0; 
+        margin: 0.5rem 0; 
     }
 
     .ganadores p {
         opacity: 0;
         transition: opacity 1s ease-in-out;
+    }
+
+    .ganador4 h3{
+        color: rgb(233, 29, 29);
+        font-size: 1.6rem;
     }
 
     .ganador4{
