--- a/src/estilos/inicio.css
+++ b/src/estilos/inicio.css
@@ -3,6 +3,7 @@
     color: #232324;
     text-align: center;
     margin: 3.2rem auto;
+    cursor: pointer;
 }
 
 h2{
@@ -11,28 +12,67 @@ h2{
     letter-spacing: 1px;
 }
 
-
 .video-container {
-    width: 100%;
-    position: relative;
-    padding-bottom: 100%; 
+    position: relative; 
+    max-width: 100%; 
+    
 }
 
-.video-container video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.video-container  .vid1 video {
+    width: 100%; 
+    height: auto; 
+    top:0;
 }
+
+ .vid2 video{
+    display: none;
+}
+
+@media (min-width: 600px) {
+    .vid1 video{
+        display: none;
+    }
+
+    .video-container{
+        margin: 3rem 0;
+    }
+
+    .vid2 video {
+        display: flex;
+        width: 100%; 
+        height: 600px; 
+    }
+}
+
 
 .carousel,
 .redes h2{
     color: rgb(144, 50, 233);
 }
 
+.section{
+    display: block;
+}
+
+.participar{
+    margin: 2.9rem 2rem ;
+    padding: 9px;
+    border: 1px solid #080616;
+    border-radius: 8px;
+    background-color: #f0f0f0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+}
+
+.participar:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
+}
+
+
 .par{
-    margin: 2rem auto 1rem;
+    margin: 2rem auto 0;
+    
 }
 
 .par a{
@@ -42,24 +82,21 @@ h2{
     margin: .7rem .4rem;
 }
 
-.imagen a{
-    display: flex;
-    justify-content: center;
-    font-size: 1.2rem;
-    margin: .7rem;
+a:hover{
+    transition: .7s;
+    color: #be0a0a;
 }
 
 
 .imagen{
-    width: 100%;
-    margin: 0 auto;
-    padding: 3rem 2rem;
+    margin: 4rem auto;
 }
 
 .imagen img{
-    max-width: 300px;
-    max-height: 350px;
-}
+    margin: 22px 0;
+    max-width: 250px;
+    height: auto;
+} 
 
 .carousel a{
     display: flex;
@@ -68,13 +105,14 @@ h2{
     margin: .7rem;
 }
 
-.participar,
+
 .carousel,
 .sorteo,
 .redes{
     margin: 2.9rem auto 0;
     padding: 12px 6px;
     width: 100%;
+    
 }
 
 
@@ -100,7 +138,7 @@ h2{
     color: #3b5998; /
 }
 
-/* Estilos para dispositivos de escritorio (a partir de 800px) */
+
 @media (min-width: 800px) {
     .inicio {
         margin: 3.2rem auto;
@@ -110,32 +148,27 @@ h2{
         font-size: 2rem;
     }
 
-    .video-container {
-        padding-bottom: 56.25%; /* Proporción de aspecto 16:9 */
-    }
 
-    .par {
-        margin: 2rem auto 1rem;
+    .section {
+        display: flex; 
+        justify-content: center;
     }
-
-    .par a {
-        font-size: 1.4rem;
+    
+    .participar{
+        padding: 2.9rem 2rem;
+        margin: 4rem 7rem;
     }
-
-    .imagen {
-        padding: 3rem 0;
+    
+    .par a
+    {
+        margin: 1rem; 
     }
+    
 
-    .imagen img {
-        max-width: 100%;
-        max-height: 100%;
-    }
-
-    .participar,
     .carousel,
     .sorteo,
     .redes {
-        margin: 2.9rem auto 0;
+        margin: 2.9rem auto ;
         padding: 12px 0;
     }
 
@@ -146,6 +179,6 @@ h2{
 
     .iconos i {
         font-size: 3rem;
-        margin: 1.8rem 3rem 0;
+        margin: 1.8rem 4.2rem 0;
     }
 }
