--- a/src/estilos/premios.css
+++ b/src/estilos/premios.css
@@ -1,13 +1,12 @@
 
 
 .premios{
+    max-width:1200px; /* Ancho máximo ajustado */
     margin: 7rem auto 0rem;
     text-align: center;
     color: #080616;
     cursor: pointer;
 }
-
-
 .premios h2{
     margin: 2rem 2rem ;
     font-weight: 700;
@@ -15,22 +14,21 @@
 }
 
 h3 {
-    line-height: 1.4;
     text-align: center;
-    margin: 20px 0;
-    padding: 0px 18px;
+    margin:12px;
 }
 
 .texto {
     border-radius: 10px;
     padding: 20px;
+    margin: 1rem 0;
 }
 
 
 
 .texto li {
     position: relative;
-    margin-bottom: 15px;
+    margin: 2.2rem 0 1rem;
     font-size: 16px;
     font-weight: 600;
     line-height: 1.6;
@@ -49,18 +47,8 @@ h3 {
     font-weight: bold;
     color: #f1592a; /* Color naranja */
     display: flex;
+    margin: 8px 0px;
     font-size: 1.2rem;
-}
-
-/* Estilos para dispositivos de escritorio */
-@media (min-width: 768px) {
-    .texto {
-        padding: 30px;
-    }
-
-    .texto li {
-        font-size: 18px;
-    }
 }
 
 .atencion {
@@ -68,7 +56,7 @@ h3 {
     border: 2px solid #ccc;
     border-radius: 10px;
     padding: 20px;
-    margin: 20px auto;
+    margin: 20px 12px;
     text-align: center;
 }
 
@@ -93,13 +81,25 @@ h3 {
     color: #5cb85c; /* Color verde */
 }
 
-/* Estilos para dispositivos de escritorio */
 @media (min-width: 768px) {
-    .atencion {
-        padding: 30px;
+    .premios {
+
+        margin: 7rem auto 0rem;
+        text-align: center;
+        cursor: pointer;
     }
 
-    .atencion p {
-        font-size: 18px;
+
+
+    .texto {
+        margin: 1rem auto; /* Ajustado para centrar horizontalmente */
+        
+    }
+
+    .texto span{
+        font-size: 1.3rem;
+    }
+    .texto li{
+        font-size: 1.2rem;
     }
 }
