--- a/src/estilos/reloj.css
+++ b/src/estilos/reloj.css
@@ -33,5 +33,15 @@
     
 }
 
+@media (min-width: 768px){
+    .variable{
+        font-size: 3rem;
+    }
+    .descripcion{
+        font-size: 1.2rem;
+    }
+
+}
+
 
 
