--- a/src/estilos/reglas.css
+++ b/src/estilos/reglas.css
@@ -100,8 +100,9 @@ span {
 }
 
 h3{
-    margin: 18px auto;
-    font-size: 1.2rem;
+    margin: 22px auto;
+    font-size: 1.4rem;
+    color: rgb(19, 18, 18);
 }
 h4{
     font-size: 1rem;
