--- a/src/estilos/inicio.css
+++ b/src/estilos/inicio.css
@@ -52,14 +52,15 @@ h2{
 
 .section{
     display: block;
+    margin: 2rem 0;
 }
 
 .participar{
     margin: 2.9rem 2rem ;
-    padding: 9px;
+    padding: 0 12px;
     border: 1px solid #080616;
-    border-radius: 8px;
-    background-color: #f0f0f0;
+    border-radius: 9px;
+    background-color: #f8eded;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
 }
@@ -155,7 +156,7 @@ a:hover{
     }
     
     .participar{
-        padding: 2.9rem 2rem;
+        padding: 2rem 2rem;
         margin: 4rem 7rem;
     }
     
